syntax = "proto3";

package common.pb.page;
option go_package = "github.com/opengoats/cmdb/common/pb/page";

message PageRequest {
    uint64 page_size = 1;
    uint64 page_number = 2;
}